--- a/payplus-payment-gateway/assets/css/style.css
+++ b/payplus-payment-gateway/assets/css/style.css
@@ -84,34 +84,56 @@ html[lang="en"]
 .express-checkout-product {
     margin: 5% auto;
     border-radius: 12px;
-    border: 1px solid #e3e6e9;
+    border: 1px solid #f9f9f9;
     padding: 20px 10px 10px 10px;
     position: relative;
     display: block;
     width: 100%;
 }
 
+.border-with-word {
+    position: relative;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.border-with-word::before,
+.border-with-word::after {
+    content: "";
+    flex: 1;
+    border-top: 2px solid #cfcaca; /* Adjust the thickness and color of the border */
+    margin: 0 0; /* Adjust the gap around the text */
+}
+
+.border-with-word span {
+    background: transparent; /* Match the background color to your container */
+    padding: 0 10px; /* Optional: Add padding around the text */
+}
+
 @media (min-width: 767.98px) {
     .express-checkout {
-        margin: 5% auto;
-        border-radius: 12px;
-        border: 1px solid #e3e6e9;
+        margin: 3% auto 0 auto;
+        /* border-radius: 12px; */
+        /* border: 1px solid #e3e6e9; */
         padding: 20px 10px 10px 10px;
         position: relative;
         display: block;
-        width: 48%;
+        width: 26%;
     }
 }
 
 @media (max-width: 767.98px) {
     .express-checkout {
-        margin: 5% auto;
-        border-radius: 12px;
-        border: 1px solid #e3e6e9;
-        padding: 20px 10px 10px 10px;
+        margin: 3% auto 0 auto;
+        /* border-radius: 12px; */
+        /* border: 1px solid #e3e6e9; */
+        /* padding: 20px 10px 10px 10px; */
+        padding-top: 20px;
         position: relative;
         display: block;
-        width: 92%;
+        width: 100%;
     }
 }
 
@@ -124,8 +146,9 @@ html[lang="en"]
 }
 
 body #applePayButton {
-    margin-top: 10px;
-    border-radius: 0px !important;
+    margin-top: 5px;
+    margin-bottom: 10px;
+    border-radius: 3px !important;
     border: 0px;
 }
 
