--- a/payplus-payment-gateway/assets/css/style.css
+++ b/payplus-payment-gateway/assets/css/style.css
@@ -170,6 +170,22 @@ html[lang="en"]
     position: relative;
     display: block;
     width: 100%;
+    @media (min-width: 767.98px) {
+        #phone-number {
+            width: 98.5%;
+        }
+    }
+}
+
+#phone-number {
+    width: 96.5%;
+    @media (max-width: 767.98px) {
+        width: 97%;
+    }
+    display: block;
+    text-align: center;
+    border: 3px solid #606061;
+    border-radius: 5px;
 }
 
 .border-with-word {
